# tasarim_ve_bitirme

bm_tasarim/: .notlar.txt.swp  BSM401.docx  lift_up_konular.xlsx  notlar.txt  ~$BSM401.docx
bm_tasarim/FreeRTOS_ARINC653/.metadata/: .log4j2.xml  version.ini
bm_tasarim/FreeRTOS_ARINC653/01_FreeRTOS_Base/: .cproject  .mxproject  .project  01_FreeRTOS_Base.ioc
bm_tasarim/FreeRTOS_ARINC653/01_FreeRTOS_Base/Debug/: 01_FreeRTOS_Base.elf  01_FreeRTOS_Base.list  01_FreeRTOS_Base.map  makefile  objects.list  sources.mk
bm_tasarim/FreeRTOS_ARINC653/01_FreeRTOS_Base_VSC/: .mxproject
bm_tasarim/FreeRTOS_ARINC653/02_FreeRTOS_Heap/: 01_FreeRTOS_Base.ioc  CMakeLists.txt
bm_tasarim/FreeRTOS_ARINC653/02_Heap_653/: .mxproject  02_Heap_653.ioc  CMakeLists.txt
bm_tasarim/FreeRTOS_ARINC653/03_Heap_653/: .cproject  .mxproject  .project  03_Heap_653 Debug.launch  03_Heap_653.ioc
bm_tasarim/FreeRTOS_ARINC653/03_Heap_653/Debug/: makefile  objects.list  sources.mk
bm_tasarim/FreeRTOS_ARINC653/04_Heap_653/: 04_Heap_653.ioc  CMakeLists.txt
bm_tasarim/FreeRTOS_ARINC653/05_Heap_653/: 05_Heap_653.ioc  CMakeLists.txt  STM32F303XX_FLASH.ld
bm_tasarim/FreeRTOS_ARINC653/05_Heap_653/MiddleWares/SEGGER/: CMakeLists.txt
bm_tasarim/FreeRTOS_ARINC653/05_Heap_653/MiddleWares/SEGGER/SEGGER/: SEGGER_SYSVIEW_ConfDefaults.h
bm_tasarim/FreeRTOS_ARINC653/05_Heap_653/config/: partition_mem.json
bm_tasarim/FreeRTOS_ARINC653/06_Heap_653/: .cproject  .mxproject  .project  06_Heap_653 Debug.launch  06_Heap_653.ioc
eski_proje/: BSM401.docx  BSM498.docx  Presentation1.pptx  konu_basliklari.docx
(+175 files in other folders)
